[workspace]
members = [
    "crates/api",
    "crates/mempool",
    "crates/executor",
    "crates/storage",
    "crates/blockmgmt",
    "crates/model",
    "crates/utils/crypto",
]
resolver = "2"

[workspace.dependencies]
rt-evm-api = { path = "crates/api" }
rt-evm-mempool = { path = "crates/mempool" }
rt-evm-executor = { path = "crates/executor" }
rt-evm-storage = { path = "crates/storage", default-features = false }
rt-evm-blockmgmt = { path = "crates/blockmgmt" }
rt-evm-model = { path = "crates/model" }
rt-evm-crypto = { path = "crates/utils/crypto" }

evm = { version = "0.41", features = ["with-serde"] }
ethereum = { version = "0.15", features = ["with-serde"] }
ethereum-types = "0.14"
ethabi = "18.0.0"

beef = "0.5"
jsonrpsee = { version = "0.15", features = ["http-server", "macros", "ws-server"] }

rlp = "0.5"
rlp-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
faster-hex = "0.6"
bcs = "0.1.5"
bytes = { version = "1.4", features = ["serde"] }
derive_more = "0.99"

ophelia = "0.3"
ophelia-secp256k1 = "0.3"

moka = "0.10.0"
rayon = "1.7.0"
tokio = { version = "1.26", features = ["full"] }
parking_lot = "0.12.1"
once_cell = "1.17.1"
arc-swap = "1.6"
async-trait = "0.1"

az = "1.2"
bn = { package = "substrate-bn", version = "0.6" }
rug = "1.19"
sha2 = "0.10"
ripemd = "0.1"

ruc = { version = "5.0.10", features = ["crypto", "cmd", "ssh"] }
vsdb = { version = "0.62.0", default-features = false, features = ["rocks_backend","extra_types"] }
vsdb_trie_db = "0.21"

####################################################################
####################################################################

[package]
name = "rt-evm"
version = "0.1.0"
edition = "2021"
authors = []
license = "GPLv3"
build = "build.rs"

[dependencies]
ruc = { workspace = true }
vsdb = { workspace = true }
once_cell = { workspace = true }
bcs = { workspace = true }

rt-evm-api = { workspace = true }
rt-evm-mempool = { workspace = true }
rt-evm-executor = { workspace = true }
rt-evm-storage = { workspace = true }
rt-evm-blockmgmt = { workspace = true }
rt-evm-model = { workspace = true }
 
tokio = { workspace = true }

[features]
default = ["vsdb_compress", "vsdb_bcs_codec"]
vsdb_compress= ["vsdb/compress"]

ruc_compact = ["ruc/compact"]

vsdb_bcs_codec = ["rt-evm-storage/vsdb_bcs_codec"]
vsdb_json_codec = ["rt-evm-storage/vsdb_json_codec"]
vsdb_msgpack_codec = ["rt-evm-storage/vsdb_msgpack_codec"]

[build-dependencies]
vergen = "7"